<resources>
    <string name="app_name">CalanderApp2</string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="backward"><![CDATA[<-]]></string>
    <string name="october_2023">OCTOBER 2023</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="weekly">WEEKLY</string>
    <string name="_1">1</string>
    <string name="new_event">New Event</string>
    <string name="Weekly">Weekly</string>
    <string name="event">Event</string>
    <string name="_10_00">10:00</string>
    <string name="event_3">Event 3</string>
    <string name="event_2">Event 2</string>
    <string name="event_1">Event 1</string>
    <string name="JANUARY">JANUARY</string>
    <string name="choose_contact">Choose Contact</string>
    <string name="phone_number">Phone Number</string>
    <string name="contact_name">Contact Name</string>
    <string name="add_contacts">add contacts</string>
    <string name="dot">.</string>
    <string name="contact_email">Email Address</string>
    <string-array name="views">
        <item>Month</item>
        <item>Day</item>
        <item>Week</item>
    </string-array>
    <string name="title_activity_calendar_list">CalendarListActivity</string>
    <string name="create_new_calendar">Create New Calendar</string>
    <string name="Month_view">Month</string>
    <string name="Week_view">Week</string>
    <string name="Day_view">Day</string>
    <string name="saved_contacts">Saved Contacts</string>
    <string name="view_calendars">View Calendars</string>
    <string name="search_event">Search event</string>
    <string name="calender_app">CALENDER APP</string>
    <string name="view">view</string>
    <string name="menu">menu</string>
    <string name="name">Event Name:</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="return_to_monthly_view">Return to Monthly View</string>
    <string name="send_invite">Send invite</string>
    <string name="_name">Name</string>
    <string name="enter_contact">enter contact</string>
    <string name="choose_from_contacts_app">Choose from Contacts App</string>
    <string name="todo">TODO</string>
    />

</resources>